algo-cd/project-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pet-project
  labels:
    name: pet-project
