algo-cd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-fullstack-ingress
  labels:
    name: sample-fullstack-ingress
spec:
  rules:
  - host: ashton.tk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-fullstack-service
            port: 
              number: 80
